--- a/map/data/css/ckii.css
+++ b/map/data/css/ckii.css
@@ -1,8 +1,15 @@
+body {
+    overflow: hidden;
+}
+
 #map {
-    width: 1200px;
-    height: 800px;
+    /*width: 1200px;*/
+    /*height: 800px;*/
+    width: calc(100% - 16px);
+    height: calc(100% - 16px);
     background-color: rgb(0,105,148);
-    position: fixed;
+    position: absolute;
+    overflow: hidden;
 }
 
 .info {
