--- a/data/css/map.css
+++ b/data/css/map.css
@@ -103,12 +103,7 @@ body {
     width: 50%;
 }
 
-#chat-window {
-    bottom: 20px;
-    right: 30px;
-    position: fixed;
-    background: white;
-}
+
 
 
 .demo {
@@ -120,32 +115,32 @@ body {
     font-size: 13px;
 }
 
-.chat .messages{
-    height: 300px;
-    border: 1px solid #d4d4d4;
-    overflow-y: scroll;
-    overflow-x: hidden;
-    padding: 5px;
-}
+/*.chat_wrapper .messages{*/
+    /*height: 300px;*/
+    /*border: 1px solid #d4d4d4;*/
+    /*overflow-y: scroll;*/
+    /*overflow-x: hidden;*/
+    /*padding: 5px;*/
+/*}*/
 
-.chat .messages .user{
-    color: #B22222;
-}
+/*.chat_wrapper .messages .user{*/
+    /*color: #B22222;*/
+/*}*/
 
-.chat .message{
-    width: 70%;
-}
+/*.chat_wrapper .message{*/
+    /*width: 70%;*/
+/*}*/
 
-.chat .panel{
-    margin-top: 8px;
-    padding-bottom: 8px;
-}
+/*.chat_wrapper .panel{*/
+    /*margin-top: 8px;*/
+    /*padding-bottom: 8px;*/
+/*}*/
 
-#message_text{
-    width: 70%;
-    display: inline-block;
-    margin-left: 8px;
-}
+/*#message_text{*/
+    /*width: 70%;*/
+    /*display: inline-block;*/
+    /*margin-left: 8px;*/
+/*}*/
 
 .login_chat {
     padding: 20px;
@@ -161,4 +156,147 @@ body {
 .login_error_text {
     width: 100%;
     color: red;
+}
+
+#chat-window {
+    bottom: 20px;
+    right: 30px;
+    position: fixed;
+    background: white;
+    width: 300px;
+    height: 300px;
+}
+
+ul {
+    list-style: none;
+    word-wrap: break-word;
+}
+
+/* Pages */
+
+.pages {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    width: 100%;
+}
+
+.page {
+    height: 100%;
+    position: absolute;
+    width: 100%;
+}
+
+/* Login Page */
+
+.login.page {
+    background-color: #000;
+}
+
+.login.page .form {
+    margin-top: -100px;
+    position: absolute;
+    text-align: center;
+    top: 50%;
+    width: 100%;
+}
+
+.login.page .form .usernameInput, .login.page .form .passwordInput {
+    background-color: transparent;
+    border: none;
+    border-bottom: 2px solid #fff;
+    outline: none;
+    /*padding-bottom: 10px;*/
+    text-align: center;
+    width: 250px;
+    margin: 0 25px 10px;
+    color: #fff;
+    font-size: 12px;
+}
+.login.page .form .passwordInput {
+
+}
+.login.page .title {
+    font-size: 200%;
+}
+
+/*.login.page .usernameInput {*/
+    /*font-size: 200%;*/
+    /*letter-spacing: 3px;*/
+/*}*/
+
+.login.page .title {
+    color: #fff;
+}
+
+/* Chat page */
+
+.chat.page {
+    display: none;
+}
+
+/* Font */
+
+.messages {
+    /*font-size: 150%;*/
+}
+
+.inputMessage {
+    font-size: 100%;
+}
+
+.log {
+    color: gray;
+    font-size: 70%;
+    margin: 5px;
+    text-align: center;
+}
+
+/* Messages */
+
+.chatArea {
+    height: 100%;
+    padding-bottom: 60px;
+    float: left;
+    width: 200px;
+}
+
+.messages {
+    height: 245px;
+    margin: 0;
+    overflow-y: scroll;
+    padding: 10px 20px 10px 20px;
+}
+
+.message.typing .messageBody {
+    color: gray;
+}
+
+.username {
+    float: left;
+    font-weight: 700;
+    overflow: hidden;
+    padding-right: 15px;
+    text-align: right;
+}
+
+/* Input */
+
+.inputMessage {
+    border: 2px solid #000;
+    bottom: 0;
+    height: 30px;
+    left: 0;
+    outline: none;
+    padding-left: 10px;
+    position: absolute;
+    right: 0;
+    width: 187px;
+}
+
+.chatUsers, .chatUsers ul {
+    width: 100px;
+    height: 300px;
+    float: right;
+    padding: 0;
 }
