--- a/data/css/map.css
+++ b/data/css/map.css
@@ -158,7 +158,7 @@ body {
 
 .mapmode input {
     float: right;
-    width: 50%;
+    width: calc(50% - 10px);
     border-radius: 0px !important;
     border-bottom: 1px solid #999 !important;
 }
@@ -196,6 +196,7 @@ body {
     border: none;
     border-radius: 4px;
     padding: 0 5px;
+    margin: 0 5px;
     line-height: 20px;
     color: rgb(0, 0, 0);
     font-family: Arial;
